# crossfire

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: docs.yml  release.yml  test.yml
changelog/: index.html
ci/generic/: index.html
ci/github-action/: index.html
ci/pre-commit/: index.html
crossfire/: __init__.py  analyzer.py  classifier.py  cli.py  confidence.py  corpus.py  errors.py  evaluator.py  generator.py  loader.py  logging.py  models.py  quality.py  regex.py  reporter.py
crossfire/plugins/: __init__.py  gitleaks.py  semgrep.py  sigma.py  snort.py  yara.py
development/architecture/: index.html
development/contributing/: index.html
docs/: changelog.md  index.md
docs/ci/: generic.md  github-action.md  pre-commit.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: commands.md  configuration.md  formats.md  output.md  use-cases.md
docs/reference/: cli.md  quality.md  relationships.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/commands/: index.html
guide/configuration/: index.html
guide/formats/: index.html
guide/output/: index.html
guide/use-cases/: index.html
reference/cli/: index.html
reference/quality/: index.html
reference/relationships/: index.html
search/: search_index.json
tests/: conftest.py  test_classifier.py  test_cli.py  test_confidence.py  test_corpus.py  test_evaluator.py  test_generator.py  test_loader.py  test_logging.py  test_models.py  test_plugins.py  test_quality.py  test_reporter.py  test_version.py
tests/fixtures/: disjoint.json  gitleaks_sample.toml  overlapping.json  sample_rules.json  semgrep_sample.yaml  sigma_sample.yaml  snort_sample.rules  yara_sample.yar
